--- a/app/src/main/res/drawable/collections_filter_button.xml
+++ b/app/src/main/res/drawable/collections_filter_button.xml
@@ -1,9 +1,11 @@
+<!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
-    android:shape="rectangle"
-    android:textColor="@color/white">
-
-    <solid android:color="@color/primary_button" />
+    android:shape="rectangle">
+    <stroke
+        android:width="2dp"
+        android:color="@color/black" />
+    <solid android:color="@android:color/transparent" />
     <corners
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"
