--- a/app/src/main/res/drawable/header.xml
+++ b/app/src/main/res/drawable/header.xml
@@ -1,12 +1,13 @@
+<!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
     android:shape="rectangle"
-    android:textColor="@color/white">
 
-    <solid android:color="@color/primary_button" />
+    android:padding="10dp">
+
+    <solid android:color="@color/header" />
     <corners
-        android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"
+        android:bottomLeftRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp" />
 </shape>
