--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,13 +21,18 @@
     <EditText
         android:id="@+id/editLogin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_corners"
-        android:hint="Login"
+        android:hint="@string/login"
+
         android:textAlignment="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/blogger_sans_medium_italic"
+        android:textAllCaps="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -37,33 +42,43 @@
     <EditText
         android:id="@+id/editPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_corners"
-        android:hint="Password"
-        android:password="true"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+
         android:textAlignment="center"
+        android:textSize="20sp"
+        android:fontFamily="@font/blogger_sans_medium_italic"
+        android:textAllCaps="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editLogin">
-
     </EditText>
 
     <EditText
         android:id="@+id/editConfirm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_corners"
-        android:hint="Confirm Password"
-        android:password="true"
+        android:hint="@string/confirm_password"
+        android:inputType="textPassword"
         android:textAlignment="center"
         android:visibility="gone"
+
+        android:textSize="20sp"
+        android:textStyle="italic"
+        android:fontFamily="@font/blogger_sans_medium"
+        android:textAllCaps="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,8 +94,13 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/primary_button"
-        android:text="Log In"
+        android:text="@string/log_in"
+
         android:textColor="@color/white"
+        android:textSize="16sp"
+        android:fontFamily="@font/blogger_sans_bold"
+        android:textAllCaps="false"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editConfirm" />
@@ -93,8 +113,13 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/button"
-        android:text="Register!"
+        android:text="@string/register"
+
         android:textColor="@color/white"
+        android:textSize="16sp"
+        android:fontFamily="@font/blogger_sans_bold"
+        android:textAllCaps="false"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -107,9 +132,13 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:text="Don't Have an Account?"
+        android:text="@string/dont_have_an_account"
+
+        android:textStyle="bold"
         android:textSize="20sp"
-        android:textStyle="bold|italic"
+        android:fontFamily="@font/blogger_sans_medium_italic"
+        android:textAllCaps="false"
+
         app:layout_constraintBottom_toTopOf="@+id/btSwitchLoginMode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
