feat: activities behavior updated (no back animations + singleTask view)

--- a/app/src/main/res/layout/activity_drink_by_mood_result.xml
+++ b/app/src/main/res/layout/activity_drink_by_mood_result.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/blogger_sans_bold"
         android:padding="10dp"
 
-        android:text="Your coffee is"
+        android:text="@string/your_coffee_is"
         android:textAlignment="center"
         android:textSize="12pt"
 
