--- a/app/src/main/res/layout/activity_coffee_book.xml
+++ b/app/src/main/res/layout/activity_coffee_book.xml
@@ -16,13 +16,13 @@
 
         android:background="@drawable/header"
         android:fontFamily="@font/blogger_sans_bold"
-        android:padding="10dp"
 
+        android:padding="10dp"
         android:text="@string/coffee_book"
         android:textAlignment="center"
         android:textSize="16pt"
-        android:translationZ="25dp"
 
+        android:translationZ="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,8 +66,7 @@
             android:background="@drawable/menu_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btMenuTab3"
-            app:layout_constraintStart_toEndOf="@+id/btMenuTab1"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/btMenuTab1" />
 
         <Button
             android:id="@+id/btMenuTab3"
@@ -79,6 +78,20 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/btMenuTab2"
             app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvDrinks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/menuLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMoodHeader" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
