--- a/app/src/main/res/layout/activity_track_drink.xml
+++ b/app/src/main/res/layout/activity_track_drink.xml
@@ -7,7 +7,7 @@
     tools:context=".TrackDrinkActivity">
 
     <TextView
-        android:id="@+id/tvMoodHeader"
+        android:id="@+id/tvDiaryHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -97,7 +97,7 @@
         android:textSize="12pt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMoodHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDiaryHeader" />
 
     <Spinner
         android:id="@+id/spinnerSize"
